    - changed Smarty to compile templates at runtime, allowing for arbitrary
      template resources. Also added fix for LOCK_EX under windows and changed
      a couple file permissions for security. (Monte)
    - allow arbitrary date strings to date_format, html_select_date and
      html_select_time (Monte)

Version 1.3.2
-------------
    - fixed a bug that caused some nested includes to loop infinitely. (Andrei)
    - added optional HTML header to output. (Monte)
    - significantly improved config_load performance. (Andrei)
    - added format attribute to math function. (Monte)
    - added html_select_time custom function. (Andrei)
    - fixed minor PHP warning when attempting to unset an unset variable
      (Monte)
    - added count_characters, count_words, count_sentences, count_paragraphs
      modifiers (Monte)

Version 1.3.1pl1
--------------
    - bug fix, recovered missing _syntax_error function (Monte)

Version 1.3.1
-------------
    - document first, last, index_prev, index_next (Monte)
    - added 'first' and 'last' section properties. (Andrei)
    - split out compiling code to separate class for faster template execution
      time (Monte)
    - fixed a couple of minor PHP warnings (Monte)
    - added and documented unregister_modifier() and unregister_function() API
      calls. (Monte)
    - added and documented 'fetch' and 'math' functions. (Monte)
    - added ability to index looped variables by section properties, e.g.
      $foo.index_prev/bar. (Andrei)
    - added index_prev and index_next section properties. (Andrei)
    - fixed issue with php executing in literal blocks. (Monte)

Version 1.3.0
-------------
    - moved license from GPL to LGPL (Monte)
    - implemented workaround for PHP "feature" that eats carriage returns
      if the PHP tag is at the end of the line. (Andrei)
    - removed $allow_php, added $php_handling logic (Monte)
    - added file locking to prevent reader/writer problem. (Andrei)